<resources>
    <string name="app_name">FootballAppFinal</string>
    <string name="team">Teams</string>
    <string name="favorites">Favorites</string>

    <string-array name="club_name">
        <item>Barcelona FC</item>
        <item>Real Madrid FC</item>
        <item>Bayern Munchen FC</item>
        <item>Manchester City FC</item>
        <item>Manchester United FC</item>
        <item>Chelsea FC</item>
        <item>AC Milan FC</item>
        <item>Arsenal FC</item>
    </string-array>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chelsea">Chelsea</string>
    <string name="year">Year</string>
    <string name="stamford_bridge">Stamford Bridge</string>
    <string name="description">Description</string>
    <string name="player_description">Player Description</string>
    <string name="player_position">Player Position</string>
    <string name="player_height">Player Height:</string>
    <string name="player_weight">Player Weight:</string>
    <string name="match">Match</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="image">Image</string>
    <string name="home_team">Home Team</string>
    <string name="goal">Goal</string>
    <string name="versus">VS</string>
    <string name="away_team">Away Team</string>
    <string name="home_scorer">Home Scorer</string>
    <string name="goals">Goals</string>
    <string name="away_scorer">Away Scorer</string>
    <string name="home_shots">Home Shots</string>
    <string name="shots">Shots</string>
    <string name="away_shots">Away Shots</string>
    <string name="lineups">Lineups</string>
    <string name="home_gk">Home GK</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="away_gk">Away GoalKeeper</string>
    <string name="home_def">Home Defender</string>
    <string name="defender">Defender</string>
    <string name="away_def">Away Defender</string>
    <string name="home_mid">Home Midfielder</string>
    <string name="midfielder">Midfielder</string>
    <string name="away_mid">Away Midfielder</string>
    <string name="home_fw">Home Forward</string>
    <string name="striker">Striker</string>
    <string name="away_fw">Away Forward</string>
    <string name="home_sub">Home Subtitute</string>
    <string name="subtitutes">Subsitutes</string>
    <string name="away_sub">Away Subitutes</string>
    <string name="textDetails">%1$s\n%2$s</string>
    <string name="search">Search</string>
    <string name="home_team_detail">Home Team Detail</string>
    <string name="home_lineups">Home Lineups</string>
    <string name="away_lineups">Away Lineups</string>
    <string name="away_team_detail">Away Team Detail</string>

</resources>
