<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_detail">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">


            <TextView
                    android:id="@+id/detail_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    android:text="@string/date"/>

            <TextView
                    android:id="@+id/detail_time_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="7dp"
                    android:text="@string/time"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:text="@string/home_team"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="20sp"/>

            <ImageView
                    android:id="@+id/fc_home_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    tools:src="@drawable/img_chelsea"
                    android:contentDescription="@string/image"/>

            <TextView
                    android:id="@+id/fc_home_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:textSize="14sp"
                    tools:text="@string/home_team"/>

            <TextView
                    android:id="@+id/home_goal_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    tools:text="@string/goal"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:text="@string/versus"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/away_goal_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    tools:text="@string/goal"/>

            <TextView
                    android:id="@+id/fc_away_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:textSize="14sp"
                    android:maxLines="1"
                    tools:text="@string/away_team"/>

            <ImageView
                    android:id="@+id/fc_away_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    tools:src="@drawable/img_chelsea"
                    android:contentDescription="@string/image"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:text="@string/away_team"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="20sp"/>

            <!-- START HOME TEAM DETAIL-->

            <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="#828a99"
                    android:layout_margin="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:text="@string/home_team_detail"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="20sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/home_scorer"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/home_scorer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:textSize="14sp"
                    tools:text="@string/home_scorer"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/shots"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/home_shots_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:textSize="14sp"
                    tools:text="@string/home_shots"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="15dp"
                    android:textColor="@color/colorYellow"
                    android:text="@string/home_lineups"
                    android:textSize="20sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/goal_keeper"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/home_gk_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/home_gk"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/defender"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>


            <TextView
                    android:id="@+id/home_def_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/home_def"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/midfielder"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>


            <TextView
                    android:id="@+id/home_mid_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/home_mid"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/striker"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>


            <TextView
                    android:id="@+id/home_fw_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/home_fw"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/subtitutes"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/home_sub_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/home_sub"/>

            <!--END HOME TEAM DETAIL-->

            <!--START AWAY TEAM DETAIL-->

            <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="#828a99"
                    android:layout_margin="10dp"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:text="@string/away_team_detail"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="20sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/away_scorer"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/away_scorer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:textSize="14sp"
                    tools:text="@string/away_scorer"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/shots"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/away_shots_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:textSize="14sp"
                    tools:text="@string/away_shots"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="15dp"
                    android:textColor="@color/colorYellow"
                    android:text="@string/away_lineups"
                    android:textSize="20sp"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/goal_keeper"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/away_gk_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/away_gk"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/defender"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/away_def_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/away_def"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/midfielder"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>


            <TextView
                    android:id="@+id/away_mid_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/away_mid"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/striker"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/away_fw_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/away_fw"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/subtitutes"
                    android:textAlignment="center"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/away_sub_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    tools:text="@string/away_sub"/>

        </LinearLayout>

</ScrollView>