<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".teams.detail.players.detail.PlayerDetailActivity">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
            android:id="@+id/player_fanart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorWhite"
            android:contentDescription="@string/description" />

    <ImageView
            android:id="@+id/player_cutout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            tools:src="@drawable/img_chelsea"
            android:layout_marginTop="15dp"/>

    <TextView
            android:id="@+id/player_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAlignment="center"
            tools:text="@string/description" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/player_weight"
            tools:text="@string/player_weight" />

    <TextView
            android:id="@+id/player_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            tools:text="@string/description" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/player_height"
            tools:text="@string/player_height" />

    <TextView
            android:id="@+id/player_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            tools:text="@string/description" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/player_position"
            tools:text="@string/player_position" />

    <TextView
        android:id="@+id/player_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        tools:text="@string/description" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/player_description"
            tools:text="@string/player_description" />

    <TextView
            android:id="@+id/player_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="@string/description" />

    </LinearLayout>
</ScrollView>