<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/detail_club_activity"
        android:orientation="vertical"
        tools:context=".teams.detail.TeamDetailActivity">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/badge_club_detail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:fitsSystemWindows="true"
                        android:layout_gravity="center"
                        tools:src="@drawable/img_chelsea"/>

                <TextView
                        android:id="@+id/club_name_detail_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        tools:text="@string/chelsea"/>

                <TextView
                        android:id="@+id/year_detail_club_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="@string/year"/>

                <TextView
                        android:id="@+id/stadium_club_detail_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="@string/stamford_bridge"/>

            </LinearLayout>

        </FrameLayout>


        <android.support.design.widget.TabLayout
                android:id="@+id/team_tabs_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:tabBackground="@color/colorPrimary"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorYellow"
                app:tabMaxWidth="0dp"
                app:tabSelectedTextColor="@color/colorWhite"
                app:tabMode="fixed"
                app:tabTextColor="@color/colorSecondaryText"/>


        <android.support.v4.view.ViewPager
                android:id="@+id/viewpager_detail_team"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </android.support.v4.view.ViewPager>

    <!--</android.support.v4.widget.NestedScrollView>-->

</LinearLayout>